--- a/dymy.css
+++ b/dymy.css
@@ -10,20 +10,26 @@ h1{
 }
 .center{
     width: 100%;
-    height: 80%;
+    height: 100%;
 }
 HTML{
+    height: 100%;
     margin: 0;
     padding: 0;
+    background-image: url(tło.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 body{
     margin: 0;
     padding: 0;
-    background-color:rgb(58, 10, 10);
+
 }
 #obraz{
-    padding-bottom: 10px;
-    background-color:rgb(58, 10, 10);
+    width: 50%;
+    height: 70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 h2{
     text-align: center;
@@ -33,4 +39,8 @@ footer{
 }
 #synek,#stary,#krol{
     display: inline-block;
+    font-size: 50px;
+}
+#n{
+    color: red;
 }
